--- a/ServiciosWeb.WebApi/ServiciosWeb.WebApi.csproj
+++ b/ServiciosWeb.WebApi/ServiciosWeb.WebApi.csproj
@@ -194,6 +194,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CustomerP.cs" />
+    <Compile Include="Models\EmployeeP.cs" />
+    <Compile Include="Models\OrderP.cs" />
+    <Compile Include="Models\ShipperP.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -252,7 +256,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
